--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
             <div class="destination" id="barcelona">
                 <h2>Sao Paolo</h2>
             </div>
+
+           <div class="destination" id="thailand">
+                <h2>Krabi</h2>
+            </div>
+
+           <div class="destination" id="malaysia">
+                <h2>Kuala Lumpur</h2>
+           </div>
+	    
         </div>
     </div>
 
